Better gallery display, fix overflow hidden

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1195,11 +1195,13 @@ footer {
 
 .metagallery {
   // background-color: green;
+  position: relative;
 
   user-select: none;
   -webkit-user-select: none;
   width: 100%;
   height: 100vh;
+  overflow: hidden;
 
   display: flex;
 }
@@ -1237,7 +1239,11 @@ footer {
 .main-photo {
   // background-color: blue;
 
-  // align-self: center;
+  align-self: center;
+  flex: 1 1 auto;
+}
+
+.summary {
   flex: 1 1 auto;
 }
 
